--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,26 @@
-    body{
-    color: rgb(31, 8, 49);
+body{
+    color: blueviolet;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
-    margin: 0;
-    padding: 0;
-    }
+    margin: auto;
+    padding: auto;
+}
 
-    #container{
-        width: 70%;
-        padding: 1cm;
-        text-align: left;
-        border: 1px solid #ddd;
-        margin: 0, auto;
-    }
+#header{
+    background-color: pink;
+    box-shadow: 0px 2px 20px 0px black;
+    color: purple ;
+    font-weight: bold;
+    margin: 0px ;
+    padding: 0.5em;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: right;
+    border: 1px solid black;
+    margin: 0,auto;
+    
+}
